# LAB_2

./: CMakeLists.txt
include/: bitstring.h
src/: bitstring.cpp  main.cpp
test/: test_bitstring.cpp
